--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -9,7 +9,6 @@
             <ul id="menu" class="menu">
                 <li><a href="/">Trang chủ</a></li>
                 <li><a href="#">Đổi pin</a></li>
-                <li><a href="#">Liên kết</a></li>
                 <li class="has-sub">
                     <a href="#" aria-haspopup="true" aria-expanded="false">Đặt lịch</a>
                     <ul class="submenu" aria-label="Đặt lịch">
@@ -17,6 +16,8 @@
                         <li><a href="#">Đặt lịch đổi pin</a></li>
                     </ul>
                 </li>
+                <li><a href="contact">Hỗ trợ</a></li>
+                <li><a href="packages">Đăng ký gói</a></li>
             </ul>
         </nav>
     </div>
