--- a/src/main/resources/templates/staff/login.html
+++ b/src/main/resources/templates/staff/login.html
@@ -140,7 +140,7 @@
                 text: 'Chào mừng bạn quay trở lại.',
                 confirmButtonText: 'Chuyển hướng'
             }).then(() => {
-                window.location.href = '/my'; // chuyển sang trang login.html
+                window.location.href = '/staff/dashboard'; // chuyển sang trang login.html
             });
         } else {
             Swal.fire({
