--- a/src/main/resources/templates/user/header-user.html
+++ b/src/main/resources/templates/user/header-user.html
@@ -10,7 +10,6 @@
             <ul id="menu" class="menu">
                 <li><a href="my">Trang chủ</a></li>
                 <li><a href="#">Đổi pin</a></li>
-                <li><a href="#">Liên kết</a></li>
                 <li class="has-sub">
                     <a href="#" aria-haspopup="true" aria-expanded="false">Đặt lịch</a>
                     <ul class="submenu" aria-label="Đặt lịch">
@@ -19,6 +18,7 @@
                     </ul>
                 </li>
                 <li><a href="contact">Hỗ trợ</a></li>
+                <li><a href="contact">Đăng ký gói</a></li>
             </ul>
         </nav>
 
@@ -105,7 +105,7 @@
                         </li>
                         <li><a href="naptien">Nạp tiền</a></li>
                         <li><a href="profile">Profile</a></li>
-                        <li><a href="#">Lịch sử giao dịch</a></li>
+                        <li><a href="lichsu">Lịch sử giao dịch</a></li>
                         <li class="logout-item">
                             <a href="logout.php" class="logout-link">Đăng xuất</a>
                         </li>
