feat(admin):Thêm trang Quản lý Lịch sử Thuê Gói -Thêm module quản lý Rental(lịch sử thuê của user) cho Admin: +Tạo AdminRentalController, RentalService, IRentalService. +Tạo giao diện admin/rentals.html để xem và xóa lịch sử. +Cập nhật _header.html để thêm menu "Lịch sử Thuê Gói". -Extends thêm JpaSpecificationExecutortrong RentalRepository để làm chức năng filter tương tác với CSDL.

--- a/src/main/resources/templates/admin/fragments/_header.html
+++ b/src/main/resources/templates/admin/fragments/_header.html
@@ -75,6 +75,12 @@
                         <i class="nav-icon fas fa-box-open"></i> <p>Quản lý Gói Thuê</p>
                     </a>
                 </li>
+
+                <li class="nav-item">
+                    <a th:href="@{/admin/rentals}" class="nav-link" th:classappend="${currentPage == 'rentals'} ? 'active' : ''">
+                        <i class="nav-icon fas fa-file-invoice-dollar"></i> <p>Lịch sử Thuê Gói</p>
+                    </a>
+                </li>
                 <li class="nav-header">QUẢN TRỊ VIÊN</li>
                 <li class="nav-item">
                     <a th:href="@{/admin/users}" class="nav-link" th:classappend="${currentPage == 'users'} ? 'active' : ''">
